--- a/estilo.css
+++ b/estilo.css
@@ -41,6 +41,15 @@ html {
 .logo {
   font-size: 1.5em;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Espacio entre imagen y texto */
+}
+
+.logo-img {
+  width: 80px;   /* Puedes ajustar según el tamaño que quieras */
+  height: 32px;
+  object-fit: contain;
 }
 
 .nav-links {
@@ -154,6 +163,53 @@ input[type="file"] {
   color: white;
 }
 
+.upload-btn {
+  display: inline-block;
+  background-color: #a17c5b; /* cafecito meloso */
+  color: white;
+  padding: 12px 24px;
+  border-radius: 10px;
+  font-weight: bold;
+  font-family: 'Segoe UI', sans-serif;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.upload-btn:hover {
+  background-color: #c8a97e;
+  color: #2e2e2e;
+  transform: scale(1.05);
+}
+
+.generate-btn {
+  margin-top: 15px;
+  padding: 12px 24px;
+  background-color: #c8a97e;
+  color: #2e2e2e;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  font-family: 'Segoe UI', sans-serif;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+}
+
+.generate-btn:hover {
+  background-color: #a17c5b;
+  color: #fff;
+  transform: scale(1.05);
+}
+
+.generate-btn:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  background-color: #e2d6c5;
+  color: #7a7a7a;
+}
+
 /* RESULTADO */
 .resultado-section {
   display: flex;
@@ -211,11 +267,16 @@ input[type="file"] {
 
 .calima-contenido p,
 .quimbaya-contenido p {
-  width: 50%;
+   width: 50%;
   background-color: #fff9f4;
-  padding: 15px;
+  padding: 40px 20px; /* más espacio arriba/abajo */
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  text-align: justify;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .calima-contenido img,
@@ -223,6 +284,13 @@ input[type="file"] {
   width: 45%;
   border-radius: 12px;
   object-fit: cover;
+}
+
+/* Contenedor centrado con márgenes */
+.contenedor {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 /* EXTRA INFO */
